welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: '(' expected but '{' found.
if { (litMessage()=="A")
   ^BDRBuggle:23: error: illegal start of simple expression
	}
        ^